[package]
name = "starknet-types-raw"
version = "0.1.0"
edition = "2021"
description = "Starknet types in formats optimized for serialization and deserialization."
authors = ["Bengineer <blockengineer42@gmail.com>"]
repository = "http://github.com/cartridge-gg/starknet-types-raw"
license = "MIT"

[dependencies]
starknet = { version = "0.17.0", optional = true }
starknet-types-core = { version = "0.2.0", optional = true }
serde = { version = "1.0.160", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions_sorted = "1.2.3"
assert_matches = "1.5.0"
serde_json = "1.0"
bincode = { version = "2.0.0", features = ["serde"] }

[features]
default = ["serde"]
starknet = ["dep:starknet"]
serde = ["dep:serde"]
